--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/g000ated/Henty-/main/media/IMG_2530.webp">
+    <meta property="og:image" content="https://raw.githubusercontent.com/g000ated/Henty-/main/media/IMG_2537.jpeg">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/g000ated/Henty-/main/media/copy_A83A98F6-DCC4-4967-BC89-74399D40540A.mov">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/g000ated/Henty-/main/media/copy_B68BBCA2-B979-47ED-BC54-E634EDF78D07.mov">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=pornhub.com" />
+    <meta http-equiv="refresh" content="0; url=github.io" />
   </head>
   <body>
   </body>
