--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/g000ated/Henty-/main/media/copy_B68BBCA2-B979-47ED-BC54-E634EDF78D07.mov">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/g000ated/giggity-/main/media/copy_B68BBCA2-B979-47ED-BC54-E634EDF78D07.mov">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=github.io" />
+    <meta http-equiv="refresh" content="0; url=google.com" />
   </head>
   <body>
   </body>
