--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/g000ated/Henty-/main/media/IMG_2537.jpeg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/g000ated/giggity-/main/media/IMG_2543.png">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
